# fyrox-vs-bevy

./: .gitignore
crates/stress-bevy/: Cargo.toml
crates/stress-bevy/assets/: m_player.glb
crates/stress-bevy/src/: game_ui.rs  main.rs
crates/stress-fyrox/: Cargo.toml
