[package]
name = "stress-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_rapier3d = "0.15.0"
smooth-bevy-cameras = "0.4.0"
bevy_editor_pls = {git= "https://github.com/jakobhellermann/bevy_editor_pls"}
